test/files/neg/t10678.check
t10678.scala:6: error: ';' expected but '<:' found.
trait U <: T
        ^
t10678.scala:8: error: ';' expected but '<:' found.
class C <: T {
        ^
t10678.scala:11: error: ';' expected but '<:' found.
object O <: T {
         ^
three errors found
